--- a/homebase.html
+++ b/homebase.html
@@ -12,7 +12,7 @@
     </header>
 
     <main class="flex items-center justify-center min-h-[calc(100vh-4rem)]">
-        <div class="bg-[#621D1D] text-white text-center p-8 w-96 border-2 border-black rounded-lg shadow-lg" style="padding: 150px; width: 700px;">
+        <div class="bg-[#621D1D] text-white text-center p-8 w-96 border-2 border-black rounded-lg shadow-lg" style="padding: 100px; width: 700px;">
             <h2 class="text-4xl font-semibold mb-4">Login</h2>
             <form action="login.php" method="POST" class="space-y-5">
                 <div>
@@ -23,12 +23,17 @@
                     <label for="password" class="block text-left">Password:</label>
                     <input type="password" id="password" name="password" required class="w-full p-2 rounded border border-gray-300 text-black placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-yellow-500" placeholder="Enter your password">
                 </div>
-                <button type="submit" class="bg-yellow-500 text-black font-bold py-2 px-4 rounded hover:bg-yellow-600">
+                <button type="submit" class="bg-yellow-500 text-black font-bold py-2 px-4 rounded hover:bg-orange-600">
                     Login
                 </button>
+                <hr class="my-4 border-white">
+ 
+                <a href="register.html" class="block">
+                    <button type="button" class="bg-yellow-500 text-black font-bold py-2 px-4 rounded hover:bg-orange-600 w-200">
+                        Register Account
+                    </button>
+                </a>
             </form>
-            <p class="mt-4">No Account Yet? <a href="register.html" class="text-yellow-400 underline">Register here</a></p>
-        </div>
     </main>
 
 </body>
