Tiwason na tani, next week na ang deadline

--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,7 @@
 </head>
 <body class="bg-gray-100 min-h-screen">
     <!-- Main Container -->
-    <div class="max-w-4xl mx-auto p-4">
+    <div class="max-w-6xl mx-auto p-4">
         <!-- Profile Section -->
         <div class="flex items-center space-x-4 mb-6">
             <!-- Profile Picture -->
@@ -34,41 +34,38 @@
             <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 mt-2">Post</button>
         </div>
 
-        <!-- Posts Section -->
         <div class="space-y-4">
-            <!-- Example Post -->
             <div class="bg-white p-4 rounded-lg shadow">
                 <div class="flex items-center justify-between">
-                    <h4 class="font-bold">User Nickname</h4>
+                    <img src="images/default_profile.png" alt="Profile Picture" class="w-16 h-16 rounded-full border-2 border-gray-300">
+                    <h4 class="font-bold">Nickname</h4>
                     <div class="space-x-2">
                         <button class="text-blue-500 hover:underline">Edit</button>
                         <button class="text-red-500 hover:underline">Delete</button>
                     </div>
                 </div>
-                <p class="mt-2">This is an example post content. Users can reply to this post.</p>
                 <div class="mt-4">
-                    <textarea class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" rows="2" placeholder="Write a reply..."></textarea>
+                    <textarea class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" rows="5" placeholder="Write a reply..."></textarea>
                     <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 mt-2">Reply</button>
                 </div>
             </div>
+        </div>
 
-            <!-- Add more posts dynamically here -->
+        <br>
+
+    <div class="space-y-4">
+        <div class="bg-white p-4 rounded-lg shadow">
+            <div class="flex items-center justify-between">
+                <img src="images/default_profile.png" alt="Profile Picture" class="w-16 h-16 rounded-full border-2 border-gray-300">
+                <h4 class="font-bold">Nickname</h4>
+            </div>
+            <div class="mt-4">
+                <textarea class="w-full p-2 border border-gray-300 rounded focus:outline-none focus:ring-2 focus:ring-blue-500" rows="5" placeholder="Write a reply..."></textarea>
+                <button class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 mt-2">Reply</button>
+            </div>
         </div>
     </div>
+</div>
 
-
-<?php
-session_start();
-
-// Check if the user is logged in
-if (!isset($_SESSION['email'])) {
-    // Redirect to login page
-    header("Location: homebase.html");
-    exit();
-}
-
-// Dummy user data for demonstration
-$user_nickname = "Miko";
-?>
 </body>
 </html>
