--- a/homebase.html
+++ b/homebase.html
@@ -10,8 +10,8 @@
     <header class="bg-[#FFDC2E] w-full py-4 px-8 flex items-center justify-between">
         <h1 class="text-3xl font-bold">WeCats</h1>
         <div class="flex space-x-4">
-            <img src="images/ig.jpg" alt="Ig Logo" class="w-16 h-16 rounded-full">
-            <img src="images/fb.jpg" alt="Fb Logo" class="w-16 h-16 rounded-full">
+            <img src="images/ig.png" alt="Ig Logo" class="w-16 h-16 rounded-full">
+            <img src="images/fb.png" alt="Fb Logo" class="w-16 h-16 rounded-full">
         </div>
     </header>
 
@@ -20,10 +20,10 @@
             <h2 class="text-4xl font-semibold mb-4">Login</h2>
             <form action="login.php" method="POST" class="space-y-5">
                 <div>
-                    <input type="email" id="email" name="email" required class="w-3/4 p-2 rounded border border-gray-300 text-black placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-yellow-500" placeholder="Enter your email">
+                    <input type="Email" id="Email" name="Email" required class="w-3/4 p-2 rounded border border-gray-300 text-black placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-yellow-500" placeholder="Enter your email">
                 </div>
                 <div>
-                    <input type="password" id="password" name="password" required class="w-3/4 p-2 rounded border border-gray-300 text-black placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-yellow-500" placeholder="Enter your password">
+                    <input type="Password" id="Password" name="Password" required class="w-3/4 p-2 rounded border border-gray-300 text-black placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-yellow-500" placeholder="Enter your password">
                 </div>
                 <button type="submit" class="bg-yellow-500 text-black font-bold py-2 px-4 rounded hover:bg-orange-600">
                     Login
@@ -38,6 +38,5 @@
                 </a>
             </form>
     </main>
-
 </body>
 </html>
